applications/Wayne/v1.3.1/wayne/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: infra-wayne
  name: infra-wayne
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-wayne
  template:
    metadata:
      labels:
        app: infra-wayne
    spec:
      volumes:
      - name: config
        configMap:
          name: infra-wayne
      containers:
      - name: wayne
        image: '360cloud/wayne:latest'
        command:
          - /opt/wayne/backend
          - apiserver
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: '0.5'
            memory: 1Gi
        volumeMounts:
          - name: config
            mountPath: /opt/wayne/conf/
        readinessProbe:
          httpGet:
            path: healthz
            port: 8080
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        imagePullPolicy: Always
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: infra-wayne-woker
  namespace: default
  labels:
    app: infra-wayne-woker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-wayne-woker
  template:
    metadata:
      labels:
        app: infra-wayne-woker
    spec:
      volumes:
      - name: config
        configMap:
          name: infra-wayne
      containers:
      - name: wayne
        image: '360cloud/wayne:latest'
        command:
        - /opt/wayne/backend
        args:
        - worker
        - '-t'
        - AuditWorker
        - '-c'
        - '1'
        resources:
          limits:
            cpu: '0.5'
            memory: 0.5Gi
          requests:
            cpu: '0.5'
            memory: 0.5Gi
        volumeMounts:
        - name: config
          mountPath: /opt/wayne/conf/
        imagePullPolicy: Always
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: infra-wayne-webhook
  namespace: default
  labels:
    app: infra-wayne-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-wayne-webhook
  template:
    metadata:
      labels:
        app: infra-wayne-webhook
    spec:
      volumes:
      - name: config
        configMap:
          name: infra-wayne
      containers:
      - name: wayne
        image: '360cloud/wayne:latest'
        command:
        - /opt/wayne/backend
        args:
        - worker
        - '-t'
        - WebhookWorker
        - '-c'
        - '1'
        resources:
          limits:
            cpu: '0.5'
            memory: 0.5Gi
          requests:
            cpu: '0.5'
            memory: 128M 
        volumeMounts:
        - name: config
          mountPath: /opt/wayne/conf/
        imagePullPolicy: Always
